<resources>
    <string name="app_name">tokobaju</string>
    <string name="welcome">WELCOME</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="belum_punya_akun">Belum punya Akun?</string>
    <string name="daftar_di_sini">Daftar di Sini</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register">REGISTER</string>
    <string name="nama">Nama</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="masuk_di_sini">Masuk di Sini</string>
    <string name="sudah_punya_akun">Sudah punya Akun?</string>
    <string name="dashboard">Dashboard</string>
    <string name="log_out">Log Out</string>
    <string name="hello">Hello</string>
    <string name="angga">Angga</string>
    <string name="search_here">Search here</string>
    <string name="lacoste">Lacoste</string>
    <string name="thrasher">Thrasher</string>
    <string name="nike">Nike</string>
    <string name="vans">Vans</string>
    <string name="home">Home</string>
    <string name="basket">Basket</string>
    <string name="account">Account</string>
    <string name="nama_produk">NAMA PRODUK</string>
    <string name="lacoste_27_cotton_t_shirt">Lacoste 27 Cotton T-Shirt</string>
    <string name="rp_1_099_000">Rp 1.099.000</string>
    <string name="add_to_chart">Add to Chart</string>
    <string name="lacoste27_t_shirt">Lacoste27 T-Shirt</string>
    <string name="produk">PRODUK</string>
    <string name="backarrow">backarrow</string>
    <string name="detail_produk">detail produk</string>
    <string name="productimage">ProductImage</string>
    <string name="lacoste_sweatshirt">Lacoste Sweatshirt</string>
    <string name="lacoste_poloshirt">Lacoste Poloshirt</string>
    <string name="produk_lacoste">PRODUK LACOSTE</string>
    <string name="produk_nike">produk nike</string>
    <string name="nike_nsw_crewneck">Nike NSW Crewneck</string>
    <string name="nike_sticker_shirt">Nike Sticker Shirt</string>
    <string name="nike_nsw_zip_hoodie">Nike NSW Zip Hoodie</string>
    <string name="produk_vans">produk vans</string>
    <string name="vans_eco_shirt">Vans Eco Shirt</string>
    <string name="vans_desert_hoodie">Vans Desert Hoodie</string>
    <string name="vans_gallery_t_shirt">Vans Gallery T-shirt</string>
    <string name="lacoste_crewneck">Lacoste Crewneck</string>
    <string name="lacoste_x_mc_hood">Lacoste x MC Hood</string>
    <string name="produk_thrasher">produk thrasher</string>
    <string name="thrasher_mexico">Thrasher Mexico</string>
    <string name="thrasher_flame">Thrasher Flame</string>
    <string name="thrasher_coach">Thrasher Coach</string>
    <string name="thrasher_crewneck">Thrasher Crewneck</string>
    <string name="nike_zip_hoodie">Nike Zip Hoodie</string>
    <string name="nike_crewneck">Nike Crewneck</string>
    <string name="nike_bomber">Nike Bomber</string>
    <string name="vans_jacket">Vans Jacket</string>
    <string name="favor">favor</string>
    <string name="setting">setting</string>
    <string name="bucket">bucket</string>
    <string name="produk_nike1">PRODUK NIKE</string>
    <string name="produk_vans1">PRODUK VANS</string>
    <string name="produk_thrasher1">PRODUK THRASHER</string>
    <string name="username">Username</string>
    <string name="lacoste_27_cotton_t_shirt_telah_di_order_silahkan_cek_keranjang">Lacoste 27 Cotton T-Shirt telah di order, silahkan cek keranjang!</string>
    <string name="t_shirt_lacoste27">T-shirt lacoste27</string>
    <string name="produk_lacoste1">PRODUK LACOSTE</string>
    <string name="upgrade_your_basics_with_a_t_shirt_made_for_year_round_use_crafted_to_offer_various_looks_and_styles_the_27_coll_tee_is_designed_with_a_crew_neckline_short_sleeves_and_block_colour_throughout_finished_with_a_large_chest_design_presenting_the_brand_name_and_the_iconic_lacoste_crocodile_illustration_pair_with_jeans_and_an_unbuttoned_white_shirt_or_go_casual_in_this_and_some_linen_shorts">Upgrade your basics with a T Shirt made for year round use, crafted to offer various looks and styles. The 27 Coll Tee is designed with a crew neckline, short sleeves and block colour throughout, finished with a large chest design presenting the brand name and the iconic Lacoste Crocodile illustration. Pair with jeans and an unbuttoned white shirt or go casual in this and some linen shorts.</string>
    <string name="keranjang">KERANJANG</string>
    <string name="icondelete">icondelete</string>
    <string name="rp_1_200_000">Rp.1.200.000</string>
    <string name="rp_2_000_000">Rp 2.000.000</string>
    <string name="rp_800_000">Rp 800.000</string>
    <string name="nike_sticker_t_shirt">Nike Sticker T-Shirt</string>
    <string name="rp_1_200_0001">Rp 1.200.000</string>
    <string name="rp_600_000">RP.600.000</string>
    <string name="rp_400_000">Rp 400.000</string>
    <string name="rp_1_300_000">Rp 1.300.000</string>
    <string name="rp_500_000">Rp 500.000</string>
    <string name="sub_total">Sub Total</string>
    <string name="rp_5_000_000">Rp 5.000.000</string>
    <string name="ongkos_kirim">Ongkos Kirim</string>
    <string name="rp_50_000">Rp 50.000</string>
    <string name="total">Total</string>
    <string name="rp_5_050_000">Rp 5.050.000</string>
    <string name="checkout">Checkout</string>
    <string name="toko_baju">TOKO BAJU</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="sosial_media_kami">Sosial Media Kami</string>
    <string name="google">google</string>
    <string name="instagram">instagram</string>
    <string name="twitter">twitter</string>
    <string name="facebook">facebook</string>
    <string name="profil">PROFIL</string>
    <string name="anggadiningrat">Anggadiningrat</string>
    <string name="anggadiningrat12_gmail_com">anggadiningrat12@gmail.com</string>
    <string name="no_handphone">No Handphone</string>
    <string name="_081945525769">081945525769</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="dewa_putu_anggadiningrat">Dewa Putu Anggadiningrat</string>
    <string name="ganti_foto_profil">Ganti Foto Profil</string>

</resources>