<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AllCategories"
    android:background="@color/lightWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/backcategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/backarrow"
                android:padding="15dp"
                android:src="@drawable/ic_arrow_back" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/produk"
            android:textSize="30sp"
            android:fontFamily="@font/acme"
            android:textAllCaps="true"
            android:padding="10dp"/>

        <RelativeLayout
            android:id="@+id/produk1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/background1"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:padding="25dp"
                android:text="@string/lacoste27_t_shirt"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:fontFamily="@font/candal"
                android:padding="20dp"
                android:text="@string/detail_produk"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/lacoste2"
                android:layout_margin="10dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/productimage" />


        </RelativeLayout>

    </LinearLayout>



</ScrollView>