<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailProduk">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/productImageLayout"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="@color/white"
                android:elevation="4dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/productImage"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:background="@drawable/lacoste2"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:elevation="4dp"
                    android:src="@drawable/ic_arrow_back"
                    app:tint="@color/black"
                    tools:ignore="ContentDescription,RtlHardcoded" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/productDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:gravity="center"
                android:layout_below="@+id/productImageLayout"
                android:orientation="horizontal"
                android:padding="16dp"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/productName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/nama_produk"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:ignore="NestedWeights,RtlHardcoded" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/lacoste_27_cotton_t_shirt"
                        android:textColor="@color/custom_text"
                        android:textSize="16sp"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/rp_1_099_000"
                    android:textColor="@color/custom_text"
                    android:textSize="18sp"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/productDetail"
                android:background="#fff"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp"
                android:visibility="visible">

                <RatingBar
                    android:id="@+id/ratingbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:progressBackgroundTint="#808080"
                    android:progressTint="@color/custom_button"
                    android:secondaryProgressTint="@color/black"
                    android:isIndicator="false" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rating"
                android:layout_marginVertical="16dp"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/custom_button"
                    android:elevation="3dp"
                    android:gravity="center"
                    android:paddingHorizontal="90dp"
                    android:paddingVertical="12dp"
                    android:text="@string/add_to_chart"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>